fix for ios overflow

--- a/apps/feed/css/feed.css
+++ b/apps/feed/css/feed.css
@@ -3,6 +3,11 @@ body {
 }
 
 
+div#panecontainer .item {
+	overflow: hidden;
+}
+
+
 
 
 /* Notifications */
